--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@types/react-dom": "^17.0.7",
     "@types/react-router": "^5.1.15",
     "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.21.1",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.8.8",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "sass": "^1.35.1",
     "typescript": "^4.3.4",
     "web-vitals": "^1.1.2"
@@ -47,5 +51,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.16",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0"
   }
 }
